--- a/_config.yml
+++ b/_config.yml
@@ -18,16 +18,14 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Enclave Research
+email: richard.habeeb@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+  Listing of Enclave/TEE Research for Untrusted Privileged Software and Hardware
+baseurl: "/EnclaveResearch" # the subpath of your site, e.g. /blog
+url: "https://richardhabeeb.github.io"
+twitter_username: 0xdeadbeeb
+github_username:  richardhabeeb
 
 # Build settings
 theme: minima
